Print Preview: Fix decimal text box inputs for custom margins

Custom margins text boxes were incorrectly not accepting decimal
inputs, due to a regression in delimiter value computation. Fix
regression and add test.

Bug: 819806
Change-Id: I73093bbd0193e388cfc29b92f5397e0b73a9f23d
Reviewed-on: https://chromium-review.googlesource.com/954711
Commit-Queue: Rebekah Potter <rbpotter@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542151}
Former-commit-id: c8058925cd10eafa4a1a605c7d50c9efb252cc6c